crates/arity-parser/tests/snapshots/parser_snapshots__expr_unary_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..48
  UNARY_EXPR@0..2
    BANG@0..1 "!"
    IDENT@1..2 "x"
  NEWLINE@2..3 "\n"
  ASSIGNMENT_EXPR@3..10
    IDENT@3..4 "x"
    WHITESPACE@4..5 " "
    ASSIGN_LEFT@5..7 "<-"
    WHITESPACE@7..8 " "
    UNARY_EXPR@8..10
      MINUS@8..9 "-"
      INT@9..10 "1"
  NEWLINE@10..11 "\n"
  ASSIGNMENT_EXPR@11..24
    IDENT@11..12 "y"
    WHITESPACE@12..13 " "
    ASSIGN_LEFT@13..15 "<-"
    WHITESPACE@15..16 " "
    UNARY_EXPR@16..24
      PLUS@16..17 "+"
      PAREN_EXPR@17..24
        LPAREN@17..18 "("
        BINARY_EXPR@18..23
          INT@18..19 "1"
          WHITESPACE@19..20 " "
          PLUS@20..21 "+"
          WHITESPACE@21..22 " "
          INT@22..23 "2"
        RPAREN@23..24 ")"
  NEWLINE@24..25 "\n"
  ASSIGNMENT_EXPR@25..35
    IDENT@25..26 "z"
    WHITESPACE@26..27 " "
    ASSIGN_LEFT@27..29 "<-"
    WHITESPACE@29..30 " "
    UNARY_EXPR@30..35
      BANG@30..31 "!"
      IDENT@31..35 "flag"
  NEWLINE@35..36 "\n"
  ASSIGNMENT_EXPR@36..47
    IDENT@36..37 "w"
    WHITESPACE@37..38 " "
    ASSIGN_LEFT@38..40 "<-"
    WHITESPACE@40..41 " "
    UNARY_EXPR@41..47
      MINUS@41..42 "-"
      BINARY_EXPR@42..47
        INT@42..43 "1"
        WHITESPACE@43..44 " "
        CARET@44..45 "^"
        WHITESPACE@45..46 " "
        INT@46..47 "2"
  NEWLINE@47..48 "\n"
