crates/arity-parser/tests/snapshots/parser_snapshots__expr_unexpected_prefix_op_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..4
  ERROR@0..4
    STAR@0..1 "*"
    WHITESPACE@1..2 " "
    INT@2..3 "2"
    NEWLINE@3..4 "\n"
