crates/arity-parser/tests/snapshots/parser_snapshots__expr_unexpected_prefix_op_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "unexpected operator at expression start",
        start: 0,
        end: 1,
    },
]
