crates/arity-parser/tests/snapshots/parser_snapshots__for_missing_in_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected 'in' after for variable",
        start: 0,
        end: 3,
    },
]
