crates/arity-parser/tests/snapshots/parser_snapshots__for_missing_rparen_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected ')' after for clause",
        start: 0,
        end: 3,
    },
]
